# EngineerBrain

./: README.md
ai-service/: .env.example  .gitignore  pyproject.toml
ai-service/app/: main.py
ai-service/app/agents/: critic.py  llm.py  messages.py  planner.py  reasoning_agent.py  schemas.py
ai-service/app/analysis/: ai_confirmation.py  analyzer.py  architecture_summary.py  ast_utils.py  dependency.py  enrichment.py  patterns.py  performance.py  pipeline.py  quality.py  registry.py  schemas.py  scoring.py  security.py  solid.py
ai-service/app/api/: routes_admin.py  routes_agents.py  routes_analysis.py  routes_file.py  routes_index.py  routes_search.py
ai-service/app/chunking/: chunker.py
ai-service/app/core/: config.py  errors.py  security.py
ai-service/app/embeddings/: base.py  gemini_provider.py
ai-service/app/indexing/: endpoint_detector.py  file_walker.py  framework_detector.py  import_resolver.py  pipeline.py  schemas.py
ai-service/app/parsers/: base.py  java_parser.py  js_ts_parser.py  python_parser.py  registry.py
ai-service/app/repository/: archive_store.py  clone_manager.py  schemas.py
ai-service/app/search/: schemas.py  search_service.py
ai-service/app/vectorstore/: qdrant_store.py
client/: .env.example  eslint.config.js  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx
mcp-server/: .env.example  README.md  nodemon.json  package-lock.json  package.json  tsconfig.json
server/: .env.example  .gitignore  .scratch-verify2.ts  docker-compose.yml  nodemon.json  package-lock.json  package.json
(+310 files in other folders)
