[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.44",
    "fastapi>=0.139.0",
    "gitpython>=3.1.50",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "tree-sitter>=0.26.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "uvicorn[standard]>=0.51.0",
]
